# Mistral

./: .env  .gitignore  CLAUDE.md  MarkdownGen.py  README.md  pyproject.toml  sample.md
mistral-ocr-web/: README.md  package-lock.json  package.json  vercel.json
mistral-ocr-web/src/app/: layout.tsx  page.tsx
mistral-ocr-web/src/app/api/ocr/: route.ts
mistral-ocr-web/src/components/: CopyButton.tsx  DownloadButton.tsx  FileDropzone.tsx  FileList.tsx  MarkdownPreview.tsx  ProcessingStatus.tsx
mistral-ocr-web/src/lib/: markdown-generator.ts  mistral-client.ts  types.ts
result/: ocr_result.json  ocr_result.md
src/mistral_ocr/: __init__.py  __main__.py  cli.py  client.py  markdown_generator.py  types.py  validators.py
util/: markdown_utils.py
